# garmin-analytics

./: .gitattributes  .gitignore  INSTRUCTION.md  README.md  get_token.py  index.html  pyproject.toml
.github/workflows/: prune.yml  sync.yml
coach/: __init__.py  features.py  mcp_server.py  report.py
coach/prompts/: coach.md
data/csv/: activities.csv  activity_laps.csv  daily_summary.csv  hrv.csv  personal_records.csv  sleep.csv  sync_log.csv  training.csv
data/db/: garmin.sqlite
data/json/: hrv.json  sleep.json  sync_log.json  training.json
garmin_sync/: __init__.py  auth.py  endpoints.py  prune.py  schema.sql  source.py  store.py  sync.py  transform.py
