[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "garmin-analytics"
version = "0.1.0"
description = "Personal running analytics platform powered by Garmin data and AI coaching"
requires-python = ">=3.11"
dependencies = [
    "garminconnect>=0.2.20",
    "garth>=0.4.44",
    "pandas>=2.2",
    "anthropic>=0.30",
    "mcp>=1.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "ruff", "duckdb"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
